Refactor ECC handling and update jurisdiction codes